--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-logging.level.guru.springframework.spring5recipeapp=debug
+logging.level.guru.springframework.spring5recipeapp=info
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
